--- a/style.css
+++ b/style.css
@@ -75,6 +75,37 @@ nav {
     width: 100%;
 }
 
+.nav-link {
+    color: white;
+}
+
+.nav-item:hover .nav-link {
+    color: white;
+}
+
+#line2 {
+    background-color: white;
+    height: 3px;
+    transition: width .5s;
+    width: 0px;
+}
+
+.nav-item:hover #line2 {
+    display: block;
+    width: 50px;
+}
+#line1 {
+    background-color: white;
+    height: 3px;
+    transition: width .5s;
+    width: 0px;
+}
+
+.nav-item:hover #line1 {
+    display: block;
+    width: 35px;
+}
+
 .navHead {
     display: flex;
     align-items: center;
